tests/baselines/reference/parserGreaterThanTokenAmbiguity17.errors.txt
parserGreaterThanTokenAmbiguity17.ts(1,7): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity17.ts (1 errors) ====
    1 >>> = 2;
          ~
!!! error TS1109: Expression expected.